--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 	.page {
 		margin: auto;
 		text-align: center;
-		background-color: #4e000e;
-		background-image: url(./bg-pc.jpg);
+		background-color: white;
+		background-image: url(image/bg-pc.jpg);
 		background-size: 100% 100%;
 		/* 处理背景高度 */
 		height: 100vh;
@@ -82,7 +82,7 @@
 	/* 手机端 换肤 */
 	@media screen and (min-width: 320px)and (max-width: 750px) {
 		.page {
-			background-image: url(./bg-phone.jpg);
+			background-image: url(image/bg-phone.jpg);
 		}
 	}
 
